Refactor filter for advertisement, created response for filter